--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -203,6 +203,7 @@ jobs:
           # Source: https://github.com/actions/checkout/#fetch-all-branches.
           git fetch --no-tags origin +refs/heads/${BASE_BRANCH}:refs/remotes/origin/${BASE_BRANCH}
           towncrier check --compare-with origin/${BASE_BRANCH}
+          python setup.py check  # hack to generate qutip.version.
           towncrier build --draft
 
   finalise:
