Add hypothesis to test dependencies.

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ semidefinite =
 tests =
     pytest>=5.2
     pytest-rerunfailures
+    hypothesis
 ipython =
     ipython
 ; This uses ConfigParser's string interpolation to include all the above
