--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,9 @@ include = qutip*
 
 [options.extras_require]
 graphics = matplotlib>=1.2.1
-runtime_compilation = cython>=0.29.20
+runtime_compilation =
+    cython>=0.29.20
+    filelock
 semidefinite =
     cvxpy>=1.0
     cvxopt
