--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,13 +71,11 @@ jobs:
           # a warning on Python 3.10
           # Ignore DeprecationWarnings raised by cvxpy importing scipy.sparse.X
           # under SciPy 1.8.0+.
-          # Ignore DeprecationWarnings raised by pyximport when building .pyx
-          # extensions under setuptools >= 63.1.0.
           - case-name: Python 3.10
             os: ubuntu-latest
             python-version: "3.10"
             condaforge: 1
-            pytest-extra-options: "-W ignore::ImportWarning -W ignore::DeprecationWarning:cvxpy.interface.scipy_wrapper -W ignore::DeprecationWarning:setuptools._distutils.ccompiler"
+            pytest-extra-options: "-W ignore::ImportWarning -W ignore::DeprecationWarning:cvxpy.interface.scipy_wrapper"
 
           # Windows. Once all tests pass without special options needed, this
           # can be moved to the main os list in the test matrix. All the tests
