--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,7 @@ jobs:
         python-version: ["3.9"]
         case-name: [defaults]
         numpy-requirement: [">=1.20,<1.21"]
+        coverage-requirement: ["==6.5"]
         # Extra special cases.  In these, the new variable defined should always
         # be a truth-y value (hence 'nomkl: 1' rather than 'mkl: 0'), because
         # the lack of a variable is _always_ false-y, and the defaults lack all
@@ -50,6 +51,7 @@ jobs:
             scipy-requirement: ">=1.4,<1.5"
             # let the old SciPy version select an appropriate numpy version:
             numpy-requirement: ""
+            coverage-requirement: "==6.2"  # last coverage that supported 3.6
 
           # No MKL runs.  MKL is now the default for conda installations, but
           # not necessarily for pip.
@@ -151,7 +153,7 @@ jobs:
             conda install "${{ matrix.conda-extra-pkgs }}"
           fi
           python -m pip install -e .[$QUTIP_TARGET]
-          python -m pip install coverage==6.5
+          python -m pip install "coverage${{ matrix.coverage-requirement }}"
           python -m pip install pytest-cov coveralls pytest-fail-slow
 
       - name: Package information
