--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ manylinux-i686-image = "manylinux2014"
 build-frontend = "pip"
 
 [[tool.cibuildwheel.overrides]]
-# NumPy support manylinux2010 on CPython 3.6-3.9
-select = "cp3?-*"
+# NumPy and SciPy support manylinux2010 on CPython 3.6 and 3.7
+select = "cp3{6,7}-*"
 manylinux-x86_64-image = "manylinux2010"
 manylinux-i686-image = "manylinux2010"
 
