--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,9 +106,9 @@ jobs:
     env:
       # Set up wheels matrix.  This is CPython 3.6--3.10 for all OS targets.
       CIBW_BUILD: "cp3{6,7,8,9,10,11}-*"
-      # Numpy and SciPy do not supply wheels for i686 for Python 3.10, so we
-      # skip those too:
-      CIBW_SKIP: "*-musllinux* cp310-manylinux_i686 cp310-win32"
+      # Numpy and SciPy do not supply wheels for i686 or win32 for
+      # Python 3.10+, so we skip those:
+      CIBW_SKIP: "*-musllinux* cp3{8,9,10,11}-manylinux_i686 cp3{8,9,10,11}-win32"
       OVERRIDE_VERSION: ${{ github.event.inputs.override_version }}
 
     steps:
