--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,7 @@ jobs:
       CIBW_BUILD: "cp3{6,7,8,9,10,11}-*"
       # Numpy and SciPy do not supply wheels for i686 or win32 for
       # Python 3.10+, so we skip those:
-      CIBW_SKIP: "*-musllinux* cp310-manylinux_i686 cp310-win32 cp311-manylinux_i686 cp311-win32"
+      CIBW_SKIP: "*-musllinux* cp3{8,9,10,11}-manylinux_i686 cp3{8,9,10,11}-win32"
       OVERRIDE_VERSION: ${{ github.event.inputs.override_version }}
 
     steps:
