--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,7 +190,6 @@ jobs:
       TWINE_USERNAME: __token__
       TWINE_PASSWORD: ${{ secrets.TESTPYPI_TOKEN }}
       TWINE_NON_INTERACTIVE: 1
-      TWINE_REPOSITORY: testpypi  # https://test.pypi.org/legacy/
 
     steps:
       - name: Download build artifacts to local runner
@@ -212,4 +211,4 @@ jobs:
       - name: Upload sdist and wheels to TestPyPI
         run: |
           python -m pip install "twine"
-          python -m twine upload --verbose wheels/*.whl sdist/*.tar.gz
+          python -m twine upload --repository testpypi --verbose wheels/*.whl sdist/*.tar.gz
