--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,9 +13,11 @@ build:
   tools:
     python: "3.11"
 
+conda:
+  environment: doc/rtd-environment.yml
+
 python:
   install:
-    - requirements: doc/requirements.txt
     - method: pip
       path: .[full]
 
