Apply suggestions from code review
Co-authored-by: Simon Cross <hodgestar+github@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ tests =
     pytest-rerunfailures
 ipython =
     ipython
-extra =
+extras =
     loky
     tqdm
 ; This uses ConfigParser's string interpolation to include all the above
@@ -67,4 +67,4 @@ full =
     %(semidefinite)s
     %(tests)s
     %(ipython)s
-    %(extra)s
+    %(extras)s
