--- a/.coveragerc
+++ b/.coveragerc
@@ -3,6 +3,8 @@ source = qutip
 omit =
     # QuTiP test files
     */qutip/tests/*
+    # Feature we want to remove, hiding them while waiting to see if users will complain.
+    */qutip/legacy/*
 
 [report]
 exclude_lines =
