--- a/.coveragerc
+++ b/.coveragerc
@@ -5,7 +5,7 @@ omit =
     */qutip/tests/*
     # Tool for tests
     */qutip/solver/sode/_noise.py
-    # Feature we want to remove, hiding them while waiting to see if users will complain.
+    # Feature we know are not fully tested.
     */qutip/legacy/*
 
 [report]
