Set version requirement to exclude cython 3

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ install_requires =
 setup_requires =
     numpy>=1.13.3
     scipy>=1.0
-    cython>=0.29.20
+    cython>=0.29.20,<3.0.0
     packaging
 
 [options.packages.find]
@@ -46,7 +46,7 @@ include = qutip*
 [options.extras_require]
 graphics = matplotlib>=1.2.1
 runtime_compilation =
-    cython>=0.29.20
+    cython>=0.29.20,<3.0.0
     filelock
 semidefinite =
     cvxpy>=1.0
