--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,6 +51,7 @@ jobs:
             numpy-requirement: ">=1.20,<1.21"
             scipy-requirement: ">=1.5,<1.6"
             condaforge: 1
+            oldcython: 1
 
           # No MKL runs.  MKL is now the default for conda installations, but
           # not necessarily for pip.
@@ -73,7 +74,7 @@ jobs:
             os: ubuntu-latest
             python-version: "3.10"
             condaforge: 1
-            cython3: 1
+            oldcython: 1
 
           # Python 3.11 and latest numpy
           # Use conda-forge to provide Python 3.11 and latest numpy
@@ -116,8 +117,8 @@ jobs:
           if [[ -z "${{ matrix.nocython }}" ]]; then
             QUTIP_TARGET="$QUTIP_TARGET,runtime_compilation"
           fi
-          if [[ "${{ matrix.cython3 }}" ]]; then
-            pip install cython --pre --upgrade
+          if [[ "${{ matrix.oldcython }}" ]]; then
+            pip install cython==0.29.36
           fi
           export CI_QUTIP_WITH_OPENMP=${{ matrix.openmp }}
           if [[ -z "${{ matrix.nomkl }}" ]]; then
