--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ requires = [
     "cython>=0.29.20",
     # See https://numpy.org/doc/stable/user/depending_on_numpy.html for
     # the recommended way to build against numpy's C API:
-    "oldest-supported-numpy",
+    # "oldest-supported-numpy",
+    "numpy>=1.22",
     "scipy>=1.8",
 ]
 build-backend = "setuptools.build_meta"
