--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,8 @@ install_requires =
 setup_requires =
     numpy>=1.13.3
     scipy>=1.0
-    cython>=0.29.20
+    cython>=0.29.20; python_version>='3.10'
+    cython>=0.29.20<3.0.3; python_version<='3.9'
     packaging
 
 [options.packages.find]
