--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -133,8 +133,7 @@ jobs:
           if [[ -n "${{ matrix.conda-extra-pkgs }}" ]]; then
             conda install "${{ matrix.conda-extra-pkgs }}"
           fi
-          conda list
-          python -m pip install --no-build-isolation -e .[$QUTIP_TARGET] -v
+          python -m pip install -e .[$QUTIP_TARGET] -vv
           python -m pip install "coverage${{ matrix.coverage-requirement }}"
           python -m pip install pytest-cov coveralls pytest-fail-slow
 
