Fix runtime requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,8 @@ include = qutip*
 [options.extras_require]
 graphics = matplotlib>=1.2.1
 runtime_compilation =
-    cython>=0.29.20
+    cython>=0.29.20; python_version>='3.10'
+    cython>=0.29.20,<3.0.3; python_version<='3.9'
     filelock
 semidefinite =
     cvxpy>=1.0
