Send email test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -232,3 +232,24 @@ jobs:
         run: |
           python -m pip install coveralls
           coveralls --service=github --finish
+
+      -name: Send Email
+        uses: dawidd6/action-send-mail@v3
+        if:  always()
+        with:
+          # Required mail server address if not connection_url:
+          server_address: 127.0.0.1
+          server_port: 1025
+          secure: true
+          # Optional (recommended) mail server username:
+          username: ${{variable.PROTON_MAIL}}
+          # Optional (recommended) mail server password:
+          password: ${{secrets.PROTON_MAIL_PWD}}
+          # Required mail subject:
+          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+          # Required recipients' addresses:
+          to: eric.giguere@calculquebec.ca
+          # Required sender full name (address can be skipped):
+          from: QuTiP
+          # Optional plain body:
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
