--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -235,14 +235,13 @@ jobs:
 
       -name: Send Email
         uses: dawidd6/action-send-mail@v3
-        if:  always()
         with:
           # Required mail server address if not connection_url:
           server_address: 127.0.0.1
           server_port: 1025
           secure: true
           # Optional (recommended) mail server username:
-          username: ${{variable.PROTON_MAIL}}
+          username: ${{vars.PROTON_MAIL}}
           # Optional (recommended) mail server password:
           password: ${{secrets.PROTON_MAIL_PWD}}
           # Required mail subject:
