--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -131,10 +131,11 @@ jobs:
       - name: Finalise coverage reporting
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
+          ADR: ${{ secrets.github_token }}
         run: |
           python -m pip install coveralls
           # coveralls --service=github --finish
-          echo ${{ secrets.OUTLOOK_ADR }} | wc -c
+          echo "$ADR" | wc -c
 
       - name: Send Email
         uses: dawidd6/action-send-mail@v3
@@ -154,4 +155,4 @@ jobs:
           # Required sender full name (address can be skipped):
           from: QuTiP
           # Optional plain body:
-          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }} from ${{ secrets.OUTLOOK_ADR }}
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
