--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -123,8 +123,8 @@ jobs:
             python-version: "3.10"
             pytest-extra-options: "-W ignore::ImportWarning -k 'not (test_correlation or test_interpolate or test_mcsolve)'"
 
-          # Builds without Cython at runtime.  This is a core feature;
-          # everything should be able to run this.
+          # Cython 0.29 (pyximport) and python 3.12 do not play well together.
+          # Qutip will ignore cython in this case.
           - case-name: Python 3.12
             os: ubuntu-latest
             python-version: "3.12"
