Added mpi4py to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ ipython =
     ipython
 extras =
     loky
+    mpi4py
     tqdm
 ; This uses ConfigParser's string interpolation to include all the above
 ; dependencies into one single target, convenient for testing full builds.
