Added mpi4py to setup.cfg again

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,8 @@ ipython =
 extras =
     loky
     tqdm
+mpi =
+    mpi4py
 ; This uses ConfigParser's string interpolation to include all the above
 ; dependencies into one single target, convenient for testing full builds.
 full =
@@ -70,3 +72,4 @@ full =
     %(tests)s
     %(ipython)s
     %(extras)s
+    %(mpi)s
