Add qutip-qtrl to familly repo tested

--- a/.github/workflows/tests_env.yml
+++ b/.github/workflows/tests_env.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        repo: [qutip-qip, qutip-jax, qutip-qoc]
+        repo: [qutip-qip, qutip-jax, qutip-qoc, qutip-qtrl]
 
     steps:
       - uses: actions/checkout@v4
